Details
-
Bug
-
Resolution: Fixed
-
P2: Important
-
None
-
2.10.1 (rev.02)
-
Visual Studio 2019 (v16.11.22) x64
-
013b817e5 (dev), 5302a5e64 (2.10)
Description
Syntax highlighting OK without "required":
Syntax highlighting broken with "required":
Attachments
Issue Links
- covers
-
QTVSADDINBUG-1047 Update build helper tools to use a more recent version of Qt
-
- Closed
-
For Gerrit Dashboard: QTVSADDINBUG-1087 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
473504,2 | Update QML spec to Qt 5.15.9 | dev | qt-labs/vstools | Status: MERGED | +2 | 0 |
501925,2 | Update QML spec to Qt 5.15.9 | 2.10 | qt-labs/vstools | Status: MERGED | +2 | 0 |