Update QML spec to Qt 5.15.9

Updated the QML parser to use the language specifications of Qt 5.15.9,
which brings in some new features (e.g. 'required' keyword).

Fixes: QTVSADDINBUG-1087
Change-Id: I26950de4c8f27bc29e450fe5a34677c05b7f013a
Reviewed-by: Karsten Heimrich <karsten.heimrich@qt.io>